# uva-appification-assignment

./: .gitignore  README.md  pyproject.toml
src/: productivity_apps_text_analytics.ipynb
