[tool.poetry]
name = "uva-appification-assignment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
jupyterlab = "^4.0.1"
polars = "^0.20.15"
jupyter = "^1.0.0"
notebook = "^7.1.2"
nltk = "^3.8.1"
wordcloud = "^1.9.3"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
altair = "^5.2.0"
vegafusion = {extras = ["embed"], version = "^1.6.5"}
vl-convert-python = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
